--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -1,234 +1,349 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- PAGE TITLE -->
-  <title>The Subconscious Mind — Solitude Reflections · Ninox Antolihao</title>
+  <!-- ================= SEO (SPECIFIC TO THIS REFLECTION) ================= -->
+  <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
 
-  <!-- SEO -->
-  <meta name="description" content="A reflection on the subconscious mind — the silent architect of identity and the inner bridge to the divine.">
+  <meta name="description"
+        content="A quiet, honest reflection on the limits of belief, the mystery of God, and the humility of saying: I do not know.">
 
-  <!-- SOCIAL PREVIEW / OG TAGS -->
-  <meta property="og:title" content="The Subconscious Mind — The Silent Architect of Your Identity">
-  <meta property="og:description" content="A reflection on how the subconscious becomes the bridge between who you are and who you are becoming.">
-  <meta property="og:image" content="/reflections/pages/subconsciousmind/subconL.PNG">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
+  <link rel="canonical"
+        href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+
+  <!-- ================= SOCIAL PREVIEW / OPEN GRAPH ================= -->
   <meta property="og:type" content="article">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html">
+  <meta property="og:title" content="The Paradox of God — Solitude Reflections">
+  <meta property="og:description"
+        content="A reflection on belief, truth, and the courage to live with mystery.">
+  <meta property="og:image"
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
+  <meta property="og:url"
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
-  <!-- TWITTER / X -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The Subconscious Mind">
-  <meta name="twitter:description" content="The Silent Architect of Your Identity">
-  <meta name="twitter:image" content="/reflections/pages/subconsciousmind/subconL.PNG">
+  <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
+  <meta name="twitter:description"
+        content="A reflection on belief, truth, and the courage to live with mystery.">
+  <meta name="twitter:image"
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html">
+  <!-- ================= PWA / ICONS (SAME FOR ALL) ================= -->
+  <meta name="theme-color" content="#ff6b3d">
+  <link rel="manifest" href="/reflections/manifest.json">
+  <link rel="icon" href="/reflections/assets/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/reflections/icon-180.png">
 
-  <!-- Global CSS (same as your index page) -->
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=18">
+  <!-- ================= SHARED HEADER CSS ================= -->
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=5" />
 
-  <!-- Simple inline header styles so this page is not broken
-       even if ref-header.css is missing or mis-pathed -->
   <style>
-    .ref-header {
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      background:#1f1815;
-      color:#fbe9dc;
-      padding:.75rem 1rem;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:1rem;
-      border-bottom:1px solid rgba(255,255,255,0.1);
-    }
-    .ref-header .logo {
-      font-weight:700;
-      text-decoration:none;
-      color:inherit;
-      white-space:nowrap;
-    }
-    .ref-header .header-title {
-      font-size:.85rem;
-      line-height:1.3;
-      flex:1;
-    }
-    .hamburger {
-      border:none;
-      background:#fbe9dc;
-      color:#1f1815;
-      border-radius:4px;
-      padding:.25rem .5rem;
-      font-size:1.1rem;
-      cursor:pointer;
-    }
-    .header-menu {
-      position:fixed;
-      top:3rem;
-      right:1rem;
-      background:#1f1815;
-      border:1px solid rgba(255,255,255,0.12);
-      border-radius:6px;
-      padding:.5rem 0;
-      display:none;
-      flex-direction:column;
-      min-width:220px;
-    }
-    .header-menu a {
-      display:block;
-      padding:.4rem .9rem;
-      font-size:.85rem;
-      color:#fbe9dc;
-      text-decoration:none;
-      white-space:normal;
-    }
-    .header-menu a:hover,
-    .header-menu a.active {
-      background:rgba(255,255,255,0.06);
-    }
-    .header-menu.open {
-      display:flex;
+    /* ===== Global Page Settings (ONLY for body + reading card) ===== */
+    :root{
+      --bg:#f6f2ed;        /* light page background */
+      --paper:#2a211e;     /* reading card stays dark */
+      --ink:#1a120f;
+      --muted:#8c6f62;
+      --accent:#ffb873;
+      --accent-soft:#412017;
+      --rule:#6b4b3c;
     }
 
-    @media (min-width: 900px) {
-      .ref-header {
-        padding:.9rem 3rem;
-      }
-      .header-title {
-        text-align:center;
-        font-size:1rem;
-      }
-      .header-menu {
-        position:static;
-        display:flex !important;
-        flex-direction:row;
-        border:none;
-        padding:0;
-        background:transparent;
-        min-width:0;
-        gap:.75rem;
-      }
-      .header-menu a {
-        padding:0;
-        font-size:.8rem;
-        opacity:.7;
-      }
-      .header-menu a:hover,
-      .header-menu a.active {
-        background:none;
-        opacity:1;
-      }
-      .hamburger {
-        display:none;
+    html,body{
+      margin:0;
+      padding:0;
+      background:var(--bg);
+      color:var(--ink);
+      font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+    }
+
+    /* Space under the FIXED header (height of header only) */
+    .page-spacer{
+      height:0;
+      margin-top:8.4rem;
+    }
+    @media (min-width:768px){
+      .page-spacer{
+        margin-top:9.4rem;
       }
     }
 
-    .cover-wrapper {
-      margin:1.5rem auto 1rem;
-      max-width:420px;
+    /* ===== AUDIO PLAYER (FRAMED) ===== */
+    .audio-shell{
+      max-width:900px;
+      margin:1rem 1.5rem 1.5rem;
+      padding:1rem;
+      box-sizing:border-box;
+
+      background:#120d0b;
+      border-radius:16px;
+      box-shadow:0 12px 28px rgba(0,0,0,.55);
+      border:1px solid #000;
     }
-    .cover-image {
-      display:block;
+    @media (min-width:768px){
+      .audio-shell{
+        margin:1.5rem auto 2rem;
+      }
+    }
+
+    .audio-player{
+      background:#151010;
+      border-radius:16px 16px 0 0;
+      padding:.4rem .7rem;
+      border-bottom:1px solid #000;
+    }
+    .audio-player audio{
       width:100%;
-      height:auto;
-      border-radius:10px;
-      box-shadow:0 18px 40px rgba(0,0,0,0.7);
+      display:block;
     }
-    .audio-wrapper {
-      max-width:540px;
-      margin:1.5rem auto 1rem;
-    }
-    .playlist {
-      margin-top:.75rem;
-      border-radius:8px;
-      border:1px solid rgba(255,255,255,0.08);
+
+    .track-list{
+      background:#1d1411;
+      border-radius:0 0 16px 16px;
+      border-top:1px solid #2a1a13;
       overflow:hidden;
     }
-    .track {
-      padding:.5rem .75rem;
+
+    .track-header{
+      padding:.4rem .8rem .2rem;
+      font-size:.70rem;
+      text-transform:uppercase;
+      letter-spacing:.12em;
+      color:#c9b0a4;
+      opacity:.9;
+    }
+
+    .track-row{
+      position:relative;
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      padding:.38rem 2rem;
+      gap:.4rem;
+
+      width:100%;
+      margin:0;
+      border:none;
+      background:transparent;
+      text-align:left;
       cursor:pointer;
-      border-bottom:1px solid rgba(255,255,255,0.06);
+
+      font-size:.85rem;
+      color:#f3e6dd;
+      border-top:1px solid rgba(255,255,255,.04);
     }
-    .track:last-child {
-      border-bottom:none;
+    .track-row:first-of-type{
+      border-top:1px solid rgba(255,255,255,.08);
     }
-    .track-title {
+
+    .track-row:focus-visible{
+      outline:1px solid #ffb873;
+      outline-offset:2px;
+    }
+
+    .track-row::before{
+      content:"";
+      flex-shrink:0;
+      width:6px;
+      height:6px;
+      border-radius:50%;
+      background:#7b5d4b;
+      margin-top:.45rem;
+      margin-right:.5rem;
+    }
+
+    .track-main{
       font-size:.9rem;
       font-weight:600;
     }
-    .track-desc {
+    .track-meta{
       font-size:.75rem;
-      opacity:.8;
+      color:#c9b0a4;
+      margin-top:.1rem;
     }
-    .track:hover {
-      background:rgba(255,255,255,0.04);
+    .track-duration{
+      font-size:.8rem;
+      padding-top:.25rem;
+      white-space:nowrap;
+      color:#c9b0a4;
+      flex-shrink:0;
+      margin-left:.5rem;
     }
-    .reflection-text h1 {
-      margin-top:2rem;
-      margin-bottom:1.25rem;
+
+    .track-row.is-active{
+      background:#3b241e;
+      box-shadow:inset 0 0 0 1px rgba(255,184,115,.45);
     }
-    .share-wrapper {
-      margin:2rem auto 3rem;
-      text-align:center;
+    .track-row.is-active::before{
+      background:#ffb873;
     }
-    .share-wrapper button {
-      padding:.6rem 1.4rem;
-      border-radius:999px;
-      border:1px solid #ff6b3d;
-      background:#ff6b3d;
-      color:#1f1815;
-      font-weight:600;
+
+    /* RESET button look + SLIM playlist-style rows */
+    .track-row{
+      position:relative;
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      padding:.38rem 1rem;
+      gap:.4rem;
+
+      width:100%;
+      margin:1.5;
+      border:none;
+      background:transparent;
+      text-align:left;
       cursor:pointer;
+
+      font-size:.85rem;
+      color:#f3e6dd;
+      border-top:1px solid rgba(255,255,255,.04);
+    }
+    .track-row:first-of-type{
+      border-top:1px solid rgba(255,255,255,.08);
+    }
+
+    .track-row:focus-visible{
+      outline:1px solid #ffb873;
+      outline-offset:2px;
+    }
+
+    /* Little dot marker, like a playlist bullet */
+    .track-row::before{
+      content:"";
+      flex-shrink:0;
+      width:6px;
+      height:6px;
+      border-radius:50%;
+      background:#7b5d4b;
+      margin-top:.45rem;
+      margin-right:.5rem;
+    }
+
+    .track-main{
+      font-size:.9rem;
+      font-weight:600;
+    }
+    .track-meta{
+      font-size:.75rem;
+      color:#c9b0a4;
+      margin-top:.1rem;
+    }
+    .track-duration{
+      font-size:.8rem;
+      padding-top:.25rem;
+      white-space:nowrap;
+      color:#c9b0a4;
+      flex-shrink:0;
+      margin-left:.5rem;
+    }
+
+    .track-row.is-active{
+      background:#3b241e;
+      box-shadow:inset 0 0 0 1px rgba(255,184,115,.45);
+    }
+    .track-row.is-active::before{
+      background:#ffb873;
+    }
+
+    /* ===== READING CARD ===== */
+    .page-shell{
+      max-width:1000px;
+      margin:0 auto 2rem auto;
+      padding:0 1.2rem 3rem;
+      box-sizing:border-box;
+    }
+    @media (min-width:768px){
+      .page-shell{ padding:0 0 4rem; }
+    }
+
+    .reading-card{
+      background:var(--paper);
+      border-radius:18px;
+      padding:1.5rem 0.8rem 1.5rem;
+      box-shadow:0 18px 40px rgba(0,0,0,.45);
+      line-height:1.7;
+      font-size:1.02rem;
+      color:#f3e6dd;
+    }
+
+    h1{
+      font-family:"Georgia","Times New Roman",serif;
+      margin:0 0 .4rem;
+      font-size:2.1rem;
+      letter-spacing:.02em;
+    }
+
+    .subtitle{
+      font-family:"Georgia","Times New Roman",serif;
+      font-style:italic;
+      color:#c9b0a4;
+      margin-bottom:2rem;
+      font-size:.98rem;
+    }
+
+    p{
+      margin:0 0 1.15rem;
+    }
+
+    .dropcap:first-letter{
+      float:left;
+      font-size:2.7rem;
+      line-height:1;
+      padding-right:.27rem;
+      padding-top:.16rem;
+      font-family:"Georgia","Times New Roman",serif;
+      color:var(--accent);
+    }
+
+    hr{
+      border:none;
+      border-top:1px solid var(--rule);
+      margin:1rem 0;
     }
   </style>
-
-  <!-- PWA -->
-  <link rel="manifest" href="/reflections/manifest.json">
-  <meta name="theme-color" content="#1f1815">
 </head>
-
 <body>
 
-<!-- FIXED HEADER -->
-<header class="ref-header">
-  <a class="logo" href="/reflections/index.html">Solitude Reflections</a>
+  <!-- ============ FIXED HEADER (HARD-CODED FOR THIS PAGE) ============ -->
+  <header class="ref-header-shell">
+    <div class="ref-header-inner">
+      <img class="ref-header-cover"
+           src="/reflections/pages/the-paradox-of-god/paradoxsmall.jpg"
+           alt="The Paradox of God cover">
 
-  <div class="header-title">
-    The Subconscious Mind: The Silent Architect of Your Identity
-  </div>
+      <div class="ref-header-title-wrap">
+        <div class="ref-header-title">Moments of Solitude</div>
+        <div class="ref-header-sub">Stone Grill Reflections</div>
+      </div>
 
-  <button class="hamburger" type="button" onclick="toggleMenu()">☰</button>
+      <button class="ref-header-ham" id="refHam">☰</button>
+    </div>
 
-  <nav class="header-menu" id="headerMenu">
-    <a href="/reflections/index.html">All Reflections</a>
-    <a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a>
-    <a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a>
-    <a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a>
-    <a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a>
-    <a href="/reflections/pages/transcendence/read.html">Transcendence</a>
-    <a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a>
-    <a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a>
-    <a href="/reflections/pages/belief/read.html">Belief and Goodness</a>
-    <a href="/reflections/pages/question-label-sinner/read.html">Seeking Assurance is Labeled a Sinner</a>
-    <a href="/reflections/pages/initial-premise/read.html">The Initial Premise of a Perfect Loving God</a>
-    <a href="/reflections/pages/diety/read.html">The Deity</a>
-    <a href="/reflections/pages/subconsciousmind/read.html" class="active">The Subconscious Mind</a>
-  </nav>
-</header>
-
-<!-- MAIN CONTENT -->
-<div class="content">
-
-  <!-- COVER IMAGE -->
-  <div class="cover-wrapper">
-    <!-- portrait cover for this reflection -->
-    <img src="subconP.PNG" alt="The Subconscious Mind — Cover" class="cover-image">
-  </div>
+    <div class="ref-nav-panel" id="refNavPanel">
+      <div class="ref-nav-title">All Reflections</div>
+      <ul class="ref-nav-list">
+        <li><a href="/reflections/index.html">HOME</a></li>
+          <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a></li>
+          <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
+          <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html" active">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
+          <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
+          <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+          <li><a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a></li>
+          <li><a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a></li>
+          <li><a href="/reflections/pages/diety/read.html">THE DEITY</a></li>
+          <li><a href="/reflections/pages/question-label-sinner/read.html">Labeled Sinner</a></li>
+          <li><a href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
+          <li><a href="/reflections/pages/oneness-duality/read.html">Oneness Duality</a></li>
+          <li><a href="/reflections/pages/mirror-of-worship/read.html">The Mirror of Worship</a></li>
+      </ul>
+    </div>
+  </header>
 
   <!-- AUDIO PLAYER WITH 2 TRACKS -->
   <div class="audio-wrapper">
