--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -365,9 +365,8 @@
     </div>
   </div>
 
-<main>
-  <!-- REFLECTION TEXT -->
-  <article class="reflection-text">
+<main class="page-shell">
+    <article class="reading-card">
     <h1>The Subconscious Mind: The Silent Architect of Your Identity</h1>
 
     <p>
