--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -5,30 +5,30 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- ================= SEO (SPECIFIC TO THIS REFLECTION) ================= -->
-  <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
+  <title>The Subconcious Mind— Solitude Reflections · Ninox Antolihao</title>
 
   <meta name="description"
         content="A quiet, honest reflection on the limits of belief, the mystery of God, and the humility of saying: I do not know.">
 
   <link rel="canonical"
-        href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+        href="https://stonegrillresto.net/reflections/pages/subconciousmind/read.html">
 
   <!-- ================= SOCIAL PREVIEW / OPEN GRAPH ================= -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="The Paradox of God — Solitude Reflections">
+  <meta property="og:title" content="The Subconcious Mind— Solitude Reflections">
   <meta property="og:description"
         content="A reflection on belief, truth, and the courage to live with mystery.">
   <meta property="og:image"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
+        content="https://stonegrillresto.net/reflections/pages/subconciousmind/subconP.PNG">
   <meta property="og:url"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+        content="https://stonegrillresto.net/reflections/pages/subconciousmind/read.html">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
+  <meta name="twitter:title" content="The Subconcious Mind — Solitude Reflections">
   <meta name="twitter:description"
         content="A reflection on belief, truth, and the courage to live with mystery.">
   <meta name="twitter:image"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
+        content="https://stonegrillresto.net/reflections/pages/subconciousmind/subconP.PNG">
 
   <!-- ================= PWA / ICONS (SAME FOR ALL) ================= -->
   <meta name="theme-color" content="#ff6b3d">
@@ -310,11 +310,11 @@
   <header class="ref-header-shell">
     <div class="ref-header-inner">
       <img class="ref-header-cover"
-           src="/reflections/pages/the-paradox-of-god/paradoxsmall.jpg"
-           alt="The Paradox of God cover">
+           src="/reflections/pages/subconciousmind/subconP.PNG"
+           alt="The Subconcious Mind cover">
 
       <div class="ref-header-title-wrap">
-        <div class="ref-header-title">Moments of Solitude</div>
+        <div class="ref-header-title">The Subconcious Mind</div>
         <div class="ref-header-sub">Stone Grill Reflections</div>
       </div>
 
@@ -345,28 +345,48 @@
     </div>
   </header>
 
-  <!-- AUDIO PLAYER WITH 2 TRACKS -->
-  <div class="audio-wrapper">
-    <audio id="reflectionAudio" controls preload="metadata">
-      <!-- default track on load -->
-      <source id="audioSource" src="subcon.mp3" type="audio/mpeg">
-    </audio>
+  <div class="page-spacer"></div>
 
-    <div class="playlist">
-      <div class="track" onclick="switchTrack(1)">
-        <div class="track-title">The Subconscious Mind — Track 1</div>
-        <div class="track-desc">Narration Version 1</div>
-      </div>
+  <!-- ============ AUDIO + PLAYLIST ============ -->
+  <section class="audio-shell" id="audioSection">
+     <div class="track-list" id="trackList">
+      <div class="track-header">Playlist</div>
 
-      <div class="track" onclick="switchTrack(2)">
-        <div class="track-title">The Subconscious Mind — Track 2</div>
-        <div class="track-desc">Narration Version 2</div>
-      </div>
+      <!-- TRACK 1 -->
+      <button class="track-row is-active"
+              type="button"
+              data-src="/reflections/pages/the-paradox-of-god/godparadox.mp3?v=1">
+        <div>
+          <div class="track-main">The Paradox of God</div>
+          <div class="track-meta">Main narration — quiet.</div>
+        </div>
+        <div class="track-duration">04:08</div>
+      </button>
+
+      <!-- TRACK 2 -->
+      <button class="track-row"
+              type="button"
+              data-src="/reflections/pages/subconsciousmind/subcon.mp3?v=1">
+        <div>
+          <div class="track-main">Subconcious Mind</div>
+          <div class="track-meta">Alternate</div>
+        </div>
+        <div class="track-duration">04:33</div>
+      </button>
     </div>
-  </div>
+    <div class="audio-player">
+      <audio id="reflectionAudio" controls preload="metadata">
+        <source id="audioSource"
+                src="/reflections/pages/subconsciousmind/subcon.mp3?v=1"
+                type="audio/mpeg">
+      </audio>
+    </div>
+  </section>
 
-<main class="page-shell">
+  <!-- ============ MAIN READING CARD ============ -->
+  <main class="page-shell">
     <article class="reading-card">
+
     <h1>The Subconscious Mind: The Silent Architect of Your Identity</h1>
 
     <p>
