--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -326,9 +326,9 @@
       <ul class="ref-nav-list">
         <li><a href="/reflections/index.html">HOME</a></li>
           <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a></li>
-          <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
+          <li><a href="/reflections/pages/subconsciousmind/read.html" class="active">The Subconscious Mind</a></li>
           <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
-          <li><a href="/reflections/pages/the-paradox-of-god/read.html" active">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
           <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
           <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
           <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
