--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -435,9 +435,9 @@
           <li><a href="/reflections/index.html">HOME</a></li>
           <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a></li>
           <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
-          <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+          <li><a href="/reflections/pages/the-god-we-created/read.html" class="active">The God We Created</a></li>
           <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
-          <li><a href="/reflections/pages/the-inner-listener/read.html" class="active">The Prayer</a></li>
+          <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
           <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
           <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
           <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
