--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -328,7 +328,7 @@
           <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a></li>
           <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
           <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
-          <li><a href="/reflections/pages/the-paradox-of-god/read.html" active">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
           <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
           <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
           <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
@@ -336,7 +336,7 @@
           <li><a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a></li>
           <li><a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a></li>
           <li><a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a></li>
-          <li><a href="/reflections/pages/diety/read.html">THE DEITY</a></li>
+          <li><a href="/reflections/pages/diety/read.html" class="active">THE DEITY</a></li>
           <li><a href="/reflections/pages/question-label-sinner/read.html">Labeled Sinner</a></li>
           <li><a href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
           <li><a href="/reflections/pages/oneness-duality/read.html">Oneness Duality</a></li>
